# fsm_cartesio

./: CMakeLists.txt  README.md  package.xml
config/: dishwasher.yaml  dummy.yaml  dummy_plan.json  dummy_task.yaml  inria.yaml  motions.yaml  motions_test_6d_pose.yaml  open_door_with_left.yaml  pick_object.yaml  table.yaml
config/demo/: close_cabinet_left_drawer_left.npy  close_cabinet_right_drawer_right.npy  close_dishwasher_drawer_right.npy  dummy_demo_left.npy  dummy_demo_right.npy  grasp_dishwasher_right.npy  open_cabinet_left_drawer_left.npy  open_cabinet_right_door_right.npy  open_cabinet_right_drawer_right.npy  open_dishwasher_left.npy  open_dishwasher_right.npy  open_door_left.npy  pick_bleach_cleanser_from_cabinet_right.npy  pick_bleach_cleanser_from_table_right.npy  pick_bowl_from_dishwasher_right.npy  pick_mug_from_dishwasher_right.npy  pick_mustard_from_table_right.npy  pick_mustard_right.npy  pick_plate_from_dishwasher_right.npy  pick_spam_from_table_right.npy  pick_sugar_from_cabinet_right.npy  pick_sugar_from_table_right.npy  pick_sugar_right.npy  pick_tomato_soup_from_table_right.npy  pull_dishwasher_drawer_right.npy
docker/: .compile.bash  Dockerfile  build.sh  launch.sh  run_docker.sh
launch/: dummy.launch  test.launch  test_pick_pick_object_simu.launch
scripts/: back_to_human  cartesio_states.py  dummy_fsm  execute_cmd  go_to_human  go_to_tag  homing  open_door  open_door_fsm  open_door_with_left_fsm  pick_bowl_from_dishwasher  pick_object  pick_object_from_table  ros_control_bridge.py  test_6d_pose  test_grasp  update_odom
src/: sm_factory.py  states.py  utils.py
