<?xml version="1.0"?>
<package format="2">
  <name>fsm_cartesio</name>
  <version>0.0.1</version>
  <description>smach-based FSM for CartesI/O</description>

  <maintainer email="fabio.amadio@inria.fr">Fabio Amadio</maintainer>

  <license>GNUv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
</package>
