<?xml version="1.0"?>
<package format="2">
  <name>fsm_cartesio</name>
  <version>0.0.1</version>
  <description>smach-based FSM for CartesI/O</description>

  <maintainer email="fabio.amadio@inria.fr">Fabio Amadio</maintainer>

  <license>GNUv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>colorama</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pyyaml</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
 
</package>
